[project]
name = "q-learning-network-sim"
version = "1.0.0"
description = "A comparative study of reinforcement learning-based routing (Q-routing) against traditional routing algorithms"
authors = [
    { name = "Ethan Rozee" },
    { name = "Jack Whitmar" },
    { name = "Eduard Kakosyan" }
]
dependencies = [
    "matplotlib>=3.8.0",
    "networkx>=3.2.1",
    "numpy>=1.26.0",
    "optuna>=3.5.0",
    "pydot>=2.0.0",
    "simpy>=4.0.2",
]
requires-python = ">=3.13.1"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.isort]
known-first-party = ["q_learning_network_sim"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=q_learning_network_sim --cov-report=term-missing" 